# SuperCoach-VIA

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  OPTIMIZATION_README.md  README.md  all_time_top_100.csv  backtest.py  bar_chart.py  charts.py  config.py  cuDF_test.py  era_based_statistical_analysis.py  formatTop100.py  generate_readme_charts.py  gpu_disposal_prediction.py  gpu_disposal_prediction_old.py  main.py  optimize_assets.py  optimized_prediction.py  optimized_scraper.py  performance_optimization_report.md  player_scraper.py  prediction.py  prediction1.py  prediction_accuracy.py  prediction_cpu.py  prediction_old.py  pyproject.toml  recommendations.toml  refresh_and_rank.sh  refresh_data.py  refresh_readme.py  requirements.txt  requirements_optimized.txt  run_optimized_pipeline.py  testGPU.py  (+3 more)
.githooks/: pre-commit
archive/: README.md  analysis.py  cuDF_test.py  top_players_comprehensive_v1_backup.py
assets/: social-preview-spec.md
cache/: combined_data_5d2056629f997a8b_2025_5.pkl  player_data_007f0f2f61bf4030_2025_5.pkl  player_data_008b63e9802f1d94_2025_5.pkl  player_data_00c20ef3dd7dd84a_2025_5.pkl  player_data_00c72cf1c545c0b0_2025_5.pkl  player_data_01252393394850a0_2025_5.pkl  player_data_0162d7213c3832e7_2025_5.pkl  player_data_01811f283aaeb1ce_2025_5.pkl  player_data_01af1ae194050eed_2025_5.pkl  player_data_01b9d4218377876f_2025_5.pkl  player_data_01be04b9ac6b8515_2025_5.pkl  player_data_01e0ebf93dbb26d1_2025_5.pkl  player_data_021713690f9a76c0_2025_5.pkl  (+1788 more)
config/: coach_names.txt  (+2 more)
(+2013 files in other folders)
